modified:   src/app/app-routing.module.ts 	modified:   src/app/app.module.ts 	modified:   src/app/character-modal-component/character-modal-component.component.html 	modified:   src/app/character-modal-component/character-modal-component.component.ts 	modified:   src/app/characters-card-component/characters-card-component.component.html 	modified:   src/app/characters-card-component/characters-card-component.component.ts 	modified:   src/app/characters-component/characters-component.component.html 	modified:   src/app/characters-component/characters-component.component.ts 	modified:   src/app/home/home.component.html 	modified:   src/app/home/home.component.ts 	deleted:    src/app/interfaces/character.interface.ts 	deleted:    src/app/locations-component/locations-component.component.css 	deleted:    src/app/locations-component/locations-component.component.html 	deleted:    src/app/locations-component/locations-component.component.spec.ts 	deleted:    src/app/locations-component/locations-component.component.ts 	modified:   src/app/search-component/search-component.component.html 	modified:   src/app/search-component/search-component.component.ts 	modified:   src/app/services/api-service.service.ts 	modified:   src/app/services/shared-data.service.ts

--- a/src/app/character-modal-component/character-modal-component.component.html
+++ b/src/app/character-modal-component/character-modal-component.component.html
@@ -1,3 +1,4 @@
+<!--Estructura del modal que tiene la informacion de los personajes-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
