--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
+<!--Componente principal de la wiki-->
 <div class="container position-relative" style="min-height: 30vh;">
     <div class="btn-group position-absolute top-50 start-50 translate-middle" role="group"
         aria-label="Basic outlined example">
-        <button type="button" class="btn btn-outline-primary h-auto" (click)="homeCompButtons(1)" style="padding: 4vh 4vw 4vh 4vw;">
+        <button type="button" class="btn btn-outline-info h-auto" (click)="homeCompButtons(1)" style="padding: 4vh 4vw 4vh 4vw;">
             <svg xmlns="http://www.w3.org/2000/svg" width="4vw" fill="currentColor" class="bi bi-search"
                 viewBox="0 0 16 16">
                 <path
@@ -10,7 +11,7 @@
             <br>
             Search character
         </button>
-        <button type="button" class="btn btn-outline-primary" (click)="homeCompButtons(2)" style="padding: 4vh 4vw 4vh 4vw;">
+        <button type="button" class="btn btn-outline-info" (click)="homeCompButtons(2)" style="padding: 4vh 4vw 4vh 4vw;">
             <svg xmlns="http://www.w3.org/2000/svg" width="4vw" fill="currentColor"
                 class="bi bi-person-vcard" viewBox="0 0 16 16">
                 <path
